class ExitRequested(Exception):
    pass


class RestartRequested(Exception):
    pass
