package dev.bfms.tankgame;

import javafx.util.Pair;

public class Constants {
    static int WINDOWS_WIDTH = 520;
    static int WINDOWS_HEIGHT = 520;
}
